<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="player_type">
        <item>Human</item>
        <item>Random</item>
        <item>Min</item>
        <item>Max</item>
        <item>Smart</item>
        <item>Min-Max</item>
    </string-array>

    <string name="app_name">OpenMarias for Android</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Open Marias</string>
    <string name="new_game_label">New Game</string>
    <string name="settings_label">Settings</string>
    <string name="about_label">About</string>
    <string name="quit_label">Quit</string>
    <string name="title_activity_about">About</string>
    <string name="about_text">Famous card game Marias played most in Central Europe. Algorithm for computer opponent is important. Qt implementation is done by Miso Kovac.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="random_shuffling_label">Random Shuffling</string>
    <string name="left_player_label"> Left Player</string>
    <string name="right_player_label">Right Player</string>
    <string name="front_player_label">Front Player</string>
    <string name="left_player_name_text">Name 1</string>
    <string name="right_player_name_text">Name 2</string>
    <string name="front_player_name_text">Name 3</string>
    <string name="title_activity_game">Game</string>
    <string name="action_settings">Settings</string>
    <string name="deck_of_cards_description">Deck of cards.</string>
    <string name="suit_as_trump_description">Suit as Trump</string>
    <string name="title_activity_results">Results</string>

</resources>