<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <Button
        android:id="@+id/new_game_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_game_label" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_label" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_label" />

    <Button
        android:id="@+id/quit_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/quit_label" />
    
</LinearLayout>
