<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/random_shuffling"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/random_shuffling_label" />
    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="#FF0000" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/left_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/player_type" />

            <EditText
                android:id="@+id/left_player_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left_player_name_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left_player_label"
                android:textColor="@drawable/background" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/left_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/player_type" />

            <EditText
                android:id="@+id/left_player_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right_player_name_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right_player_label"
                android:textColor="@drawable/background" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/left_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/player_type" />

            <EditText
                android:id="@+id/left_player_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/front_player_name_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/front_player_label"
                android:textColor="@drawable/background" />
        </LinearLayout>
    </TableRow>

</TableLayout>